--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
  
  body{
-     background-image: url(./pexels-eberhard-grossgasteiger-691668.jpg);
+     background-image: url(./images.jpg);
      background-color: rgb(169, 168, 168);
      background-position: 0 10%;
      background-repeat: no-repeat;
